<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_centerInParent="true"
    android:layout_weight="1"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_camera_app">
    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <FrameLayout
            android:id="@+id/frameVideoView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <VideoView
            android:id="@+id/videoView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"/>
        </FrameLayout>
        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:stretchColumns="2"
            android:gravity="bottom">
         <TableRow
             android:layout_width="1dp"
             android:layout_height="wrap_content"
             android:gravity="center">
             <Button
                 android:id="@+id/RecordVideoSpeed"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/recordVideoSpeed"
                 android:onClick="startVideoSpeedRecording"/>
             <Button
                android:id="@+id/StopVideoSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stopVideoSpeed"
                android:onClick="stopVideoSpeedRecording"/>
         </TableRow>
        <TableRow
            android:layout_width="1dp"
            android:gravity="center">
            <Button
                android:id="@+id/RecordVideo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recordVideo"
                android:onClick="startVideoRecording"/>
            <Button
                android:id="@+id/StopVideo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stopVideo"
                android:onClick="stopVideoRecording"/>
        </TableRow>
            <TableRow
                android:layout_width="1dp"
                android:gravity="center">>
                <Button
                    android:id="@+id/PublishToFacebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/publishToFacebook"
                    android:onClick="publishToFacebook"/>
            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/info_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="32dip"
            android:textStyle="bold"
            android:background="@color/grey"
            android:text="@string/info"/>
    </RelativeLayout>

</RelativeLayout>

